changed background photo

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  	background-image: url("./background.jpeg");
+  	background-image: url("https://cdn.pixabay.com/photo/2016/04/15/04/02/water-1330252_960_720.jpg");
 	background-repeat: no-repeat;
    	background-color: #cccccc;
 	background-size: cover;
