--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  	background-image: url("./background.jpeg"
+  	background-image: url("./background.jpeg");
 	background-repeat: no-repeat;
    	background-color: #cccccc;
 	background-size: cover;
